miParserParser.py
# Generated from C:/Users/Meih55/Desktop/mini-python\miParser.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class miParserParser ( Parser ):

    grammarFileName = "miParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "':'", "','", "'>'", "'<'", 
                     "'<='", "'>='", "'=='", "'+'", "'-'", "'='", "'*'", 
                     "'/'", "'['", "']'", "'if'", "'else'", "'while'", "'for'", 
                     "'in'", "'return'", "'print'", "'def'", "'len'" ]

    symbolicNames = [ "<INVALID>", "PIZQ", "PDER", "DOSPUNT", "COMA", "MAYOR", 
                      "MENOR", "MAYORIGUAL", "MENORIGUAL", "IGUAL", "MAS", 
                      "MENOS", "ASIGNACION", "MULT", "DIV", "P2IZQ", "P2DER", 
                      "IF", "ELSE", "WHILE", "FOR", "IN", "RETURN", "PRINT", 
                      "DEF", "LEN", "IDENTIFIER", "INTEGER", "FLOAT", "CHARCONST", 
                      "COMMENTBLOCK", "STRING", "SINGCOMMENT", "NEWLINE", 
                      "WS", "INDENT", "DEDENT" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_defStatement = 2
    RULE_argList = 3
    RULE_moreArgs = 4
    RULE_ifStatement = 5
    RULE_whileStatement = 6
    RULE_forStatement = 7
    RULE_returnStatement = 8
    RULE_printStatement = 9
    RULE_assignStatement = 10
    RULE_functionCallStatement = 11
    RULE_expressionStatement = 12
    RULE_sequence = 13
    RULE_moreStatements = 14
    RULE_expression = 15
    RULE_comparison = 16
    RULE_additionExpression = 17
    RULE_additionFactor = 18
    RULE_multiplicationExpression = 19
    RULE_multiplicationFactor = 20
    RULE_elementExpression = 21
    RULE_elementAccess = 22
    RULE_expressionList = 23
    RULE_moreExpressions = 24
    RULE_primitiveExpression = 25
    RULE_listExpression = 26

    ruleNames =  [ "program", "statement", "defStatement", "argList", "moreArgs", 
                   "ifStatement", "whileStatement", "forStatement", "returnStatement", 
                   "printStatement", "assignStatement", "functionCallStatement", 
                   "expressionStatement", "sequence", "moreStatements", 
                   "expression", "comparison", "additionExpression", "additionFactor", 
                   "multiplicationExpression", "multiplicationFactor", "elementExpression", 
                   "elementAccess", "expressionList", "moreExpressions", 
                   "primitiveExpression", "listExpression" ]

    EOF = Token.EOF
    PIZQ=1
    PDER=2
    DOSPUNT=3
    COMA=4
    MAYOR=5
    MENOR=6
    MAYORIGUAL=7
    MENORIGUAL=8
    IGUAL=9
    MAS=10
    MENOS=11
    ASIGNACION=12
    MULT=13
    DIV=14
    P2IZQ=15
    P2DER=16
    IF=17
    ELSE=18
    WHILE=19
    FOR=20
    IN=21
    RETURN=22
    PRINT=23
    DEF=24
    LEN=25
    IDENTIFIER=26
    INTEGER=27
    FLOAT=28
    CHARCONST=29
    COMMENTBLOCK=30
    STRING=31
    SINGCOMMENT=32
    NEWLINE=33
    WS=34
    INDENT=35
    DEDENT=36

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(miParserParser.StatementContext)
            else:
                return self.getTypedRuleContext(miParserParser.StatementContext,i)


        def getRuleIndex(self):
            return miParserParser.RULE_program




    def program(self):

        localctx = miParserParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 54
                self.statement()
                self.state = 57 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << miParserParser.PIZQ) | (1 << miParserParser.MENOS) | (1 << miParserParser.P2IZQ) | (1 << miParserParser.IF) | (1 << miParserParser.WHILE) | (1 << miParserParser.FOR) | (1 << miParserParser.RETURN) | (1 << miParserParser.PRINT) | (1 << miParserParser.DEF) | (1 << miParserParser.LEN) | (1 << miParserParser.IDENTIFIER) | (1 << miParserParser.INTEGER) | (1 << miParserParser.FLOAT) | (1 << miParserParser.CHARCONST) | (1 << miParserParser.STRING) | (1 << miParserParser.NEWLINE))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def defStatement(self):
            return self.getTypedRuleContext(miParserParser.DefStatementContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(miParserParser.IfStatementContext,0)


        def returnStatement(self):
            return self.getTypedRuleContext(miParserParser.ReturnStatementContext,0)


        def printStatement(self):
            return self.getTypedRuleContext(miParserParser.PrintStatementContext,0)


        def whileStatement(self):
            return self.getTypedRuleContext(miParserParser.WhileStatementContext,0)


        def forStatement(self):
            return self.getTypedRuleContext(miParserParser.ForStatementContext,0)


        def assignStatement(self):
            return self.getTypedRuleContext(miParserParser.AssignStatementContext,0)


        def functionCallStatement(self):
            return self.getTypedRuleContext(miParserParser.FunctionCallStatementContext,0)


        def expressionStatement(self):
            return self.getTypedRuleContext(miParserParser.ExpressionStatementContext,0)


        def getRuleIndex(self):
            return miParserParser.RULE_statement




    def statement(self):

        localctx = miParserParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 68
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 59
                self.defStatement()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 60
                self.ifStatement()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 61
                self.returnStatement()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 62
                self.printStatement()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 63
                self.whileStatement()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 64
                self.forStatement()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 65
                self.assignStatement()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 66
                self.functionCallStatement()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 67
                self.expressionStatement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DefStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DEF(self):
            return self.getToken(miParserParser.DEF, 0)

        def IDENTIFIER(self):
            return self.getToken(miParserParser.IDENTIFIER, 0)

        def DOSPUNT(self):
            return self.getToken(miParserParser.DOSPUNT, 0)

        def sequence(self):
            return self.getTypedRuleContext(miParserParser.SequenceContext,0)


        def argList(self):
            return self.getTypedRuleContext(miParserParser.ArgListContext,0)


        def getRuleIndex(self):
            return miParserParser.RULE_defStatement




    def defStatement(self):

        localctx = miParserParser.DefStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_defStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.match(miParserParser.DEF)
            self.state = 71
            self.match(miParserParser.IDENTIFIER)

            self.state = 72
            self.argList()
            self.state = 73
            self.match(miParserParser.DOSPUNT)
            self.state = 74
            self.sequence()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(miParserParser.IDENTIFIER)
            else:
                return self.getToken(miParserParser.IDENTIFIER, i)

        def COMA(self, i:int=None):
            if i is None:
                return self.getTokens(miParserParser.COMA)
            else:
                return self.getToken(miParserParser.COMA, i)

        def getRuleIndex(self):
            return miParserParser.RULE_argList




    def argList(self):

        localctx = miParserParser.ArgListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_argList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.match(miParserParser.IDENTIFIER)
            self.state = 81
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==miParserParser.COMA:
                self.state = 77
                self.match(miParserParser.COMA)
                self.state = 78
                self.match(miParserParser.IDENTIFIER)
                self.state = 83
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MoreArgsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMA(self, i:int=None):
            if i is None:
                return self.getTokens(miParserParser.COMA)
            else:
                return self.getToken(miParserParser.COMA, i)

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(miParserParser.IDENTIFIER)
            else:
                return self.getToken(miParserParser.IDENTIFIER, i)

        def getRuleIndex(self):
            return miParserParser.RULE_moreArgs




    def moreArgs(self):

        localctx = miParserParser.MoreArgsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_moreArgs)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==miParserParser.COMA:
                self.state = 84
                self.match(miParserParser.COMA)
                self.state = 85
                self.match(miParserParser.IDENTIFIER)
                self.state = 90
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(miParserParser.IF, 0)

        def expression(self):
            return self.getTypedRuleContext(miParserParser.ExpressionContext,0)


        def DOSPUNT(self):
            return self.getToken(miParserParser.DOSPUNT, 0)

        def sequence(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(miParserParser.SequenceContext)
            else:
                return self.getTypedRuleContext(miParserParser.SequenceContext,i)


        def ELSE(self):
            return self.getToken(miParserParser.ELSE, 0)

        def getRuleIndex(self):
            return miParserParser.RULE_ifStatement




    def ifStatement(self):

        localctx = miParserParser.IfStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_ifStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.match(miParserParser.IF)
            self.state = 92
            self.expression()
            self.state = 93
            self.match(miParserParser.DOSPUNT)
            self.state = 94
            self.sequence()

            self.state = 96
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==miParserParser.ELSE:
                self.state = 95
                self.match(miParserParser.ELSE)


            self.state = 98
            self.sequence()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(miParserParser.WHILE, 0)

        def expression(self):
            return self.getTypedRuleContext(miParserParser.ExpressionContext,0)


        def DOSPUNT(self):
            return self.getToken(miParserParser.DOSPUNT, 0)

        def sequence(self):
            return self.getTypedRuleContext(miParserParser.SequenceContext,0)


        def getRuleIndex(self):
            return miParserParser.RULE_whileStatement




    def whileStatement(self):

        localctx = miParserParser.WhileStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_whileStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.match(miParserParser.WHILE)
            self.state = 101
            self.expression()
            self.state = 102
            self.match(miParserParser.DOSPUNT)
            self.state = 103
            self.sequence()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(miParserParser.FOR, 0)

        def expression(self):
            return self.getTypedRuleContext(miParserParser.ExpressionContext,0)


        def IN(self):
            return self.getToken(miParserParser.IN, 0)

        def expressionList(self):
            return self.getTypedRuleContext(miParserParser.ExpressionListContext,0)


        def DOSPUNT(self):
            return self.getToken(miParserParser.DOSPUNT, 0)

        def sequence(self):
            return self.getTypedRuleContext(miParserParser.SequenceContext,0)


        def getRuleIndex(self):
            return miParserParser.RULE_forStatement




    def forStatement(self):

        localctx = miParserParser.ForStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_forStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.match(miParserParser.FOR)
            self.state = 106
            self.expression()
            self.state = 107
            self.match(miParserParser.IN)
            self.state = 108
            self.expressionList()
            self.state = 109
            self.match(miParserParser.DOSPUNT)
            self.state = 110
            self.sequence()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RETURN(self):
            return self.getToken(miParserParser.RETURN, 0)

        def expression(self):
            return self.getTypedRuleContext(miParserParser.ExpressionContext,0)


        def NEWLINE(self):
            return self.getToken(miParserParser.NEWLINE, 0)

        def getRuleIndex(self):
            return miParserParser.RULE_returnStatement




    def returnStatement(self):

        localctx = miParserParser.ReturnStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_returnStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.match(miParserParser.RETURN)
            self.state = 113
            self.expression()
            self.state = 114
            self.match(miParserParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrintStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRINT(self):
            return self.getToken(miParserParser.PRINT, 0)

        def expression(self):
            return self.getTypedRuleContext(miParserParser.ExpressionContext,0)


        def NEWLINE(self):
            return self.getToken(miParserParser.NEWLINE, 0)

        def getRuleIndex(self):
            return miParserParser.RULE_printStatement




    def printStatement(self):

        localctx = miParserParser.PrintStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_printStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.match(miParserParser.PRINT)
            self.state = 117
            self.expression()
            self.state = 118
            self.match(miParserParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(miParserParser.IDENTIFIER, 0)

        def ASIGNACION(self):
            return self.getToken(miParserParser.ASIGNACION, 0)

        def expression(self):
            return self.getTypedRuleContext(miParserParser.ExpressionContext,0)


        def NEWLINE(self):
            return self.getToken(miParserParser.NEWLINE, 0)

        def getRuleIndex(self):
            return miParserParser.RULE_assignStatement




    def assignStatement(self):

        localctx = miParserParser.AssignStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_assignStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.match(miParserParser.IDENTIFIER)
            self.state = 121
            self.match(miParserParser.ASIGNACION)
            self.state = 122
            self.expression()
            self.state = 123
            self.match(miParserParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionCallStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primitiveExpression(self):
            return self.getTypedRuleContext(miParserParser.PrimitiveExpressionContext,0)


        def PIZQ(self):
            return self.getToken(miParserParser.PIZQ, 0)

        def expressionList(self):
            return self.getTypedRuleContext(miParserParser.ExpressionListContext,0)


        def PDER(self):
            return self.getToken(miParserParser.PDER, 0)

        def NEWLINE(self):
            return self.getToken(miParserParser.NEWLINE, 0)

        def getRuleIndex(self):
            return miParserParser.RULE_functionCallStatement




    def functionCallStatement(self):

        localctx = miParserParser.FunctionCallStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_functionCallStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.primitiveExpression()
            self.state = 126
            self.match(miParserParser.PIZQ)
            self.state = 127
            self.expressionList()
            self.state = 128
            self.match(miParserParser.PDER)
            self.state = 129
            self.match(miParserParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expressionList(self):
            return self.getTypedRuleContext(miParserParser.ExpressionListContext,0)


        def NEWLINE(self):
            return self.getToken(miParserParser.NEWLINE, 0)

        def getRuleIndex(self):
            return miParserParser.RULE_expressionStatement




    def expressionStatement(self):

        localctx = miParserParser.ExpressionStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_expressionStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.expressionList()
            self.state = 132
            self.match(miParserParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SequenceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INDENT(self):
            return self.getToken(miParserParser.INDENT, 0)

        def moreStatements(self):
            return self.getTypedRuleContext(miParserParser.MoreStatementsContext,0)


        def DEDENT(self):
            return self.getToken(miParserParser.DEDENT, 0)

        def getRuleIndex(self):
            return miParserParser.RULE_sequence




    def sequence(self):

        localctx = miParserParser.SequenceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_sequence)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self.match(miParserParser.INDENT)
            self.state = 135
            self.moreStatements()
            self.state = 136
            self.match(miParserParser.DEDENT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MoreStatementsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self):
            return self.getTypedRuleContext(miParserParser.StatementContext,0)


        def moreStatements(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(miParserParser.MoreStatementsContext)
            else:
                return self.getTypedRuleContext(miParserParser.MoreStatementsContext,i)


        def getRuleIndex(self):
            return miParserParser.RULE_moreStatements




    def moreStatements(self):

        localctx = miParserParser.MoreStatementsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_moreStatements)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self.statement()
            self.state = 142
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 139
                    self.moreStatements() 
                self.state = 144
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def additionExpression(self):
            return self.getTypedRuleContext(miParserParser.AdditionExpressionContext,0)


        def comparison(self):
            return self.getTypedRuleContext(miParserParser.ComparisonContext,0)


        def getRuleIndex(self):
            return miParserParser.RULE_expression




    def expression(self):

        localctx = miParserParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_expression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self.additionExpression()
            self.state = 146
            self.comparison()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComparisonContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def additionExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(miParserParser.AdditionExpressionContext)
            else:
                return self.getTypedRuleContext(miParserParser.AdditionExpressionContext,i)


        def MENOR(self, i:int=None):
            if i is None:
                return self.getTokens(miParserParser.MENOR)
            else:
                return self.getToken(miParserParser.MENOR, i)

        def MAYOR(self, i:int=None):
            if i is None:
                return self.getTokens(miParserParser.MAYOR)
            else:
                return self.getToken(miParserParser.MAYOR, i)

        def MAYORIGUAL(self, i:int=None):
            if i is None:
                return self.getTokens(miParserParser.MAYORIGUAL)
            else:
                return self.getToken(miParserParser.MAYORIGUAL, i)

        def MENORIGUAL(self, i:int=None):
            if i is None:
                return self.getTokens(miParserParser.MENORIGUAL)
            else:
                return self.getToken(miParserParser.MENORIGUAL, i)

        def IGUAL(self, i:int=None):
            if i is None:
                return self.getTokens(miParserParser.IGUAL)
            else:
                return self.getToken(miParserParser.IGUAL, i)

        def getRuleIndex(self):
            return miParserParser.RULE_comparison




    def comparison(self):

        localctx = miParserParser.ComparisonContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_comparison)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 152
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << miParserParser.MAYOR) | (1 << miParserParser.MENOR) | (1 << miParserParser.MAYORIGUAL) | (1 << miParserParser.MENORIGUAL) | (1 << miParserParser.IGUAL))) != 0):
                self.state = 148
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << miParserParser.MAYOR) | (1 << miParserParser.MENOR) | (1 << miParserParser.MAYORIGUAL) | (1 << miParserParser.MENORIGUAL) | (1 << miParserParser.IGUAL))) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 149
                self.additionExpression()
                self.state = 154
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AdditionExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def multiplicationExpression(self):
            return self.getTypedRuleContext(miParserParser.MultiplicationExpressionContext,0)


        def additionFactor(self):
            return self.getTypedRuleContext(miParserParser.AdditionFactorContext,0)


        def getRuleIndex(self):
            return miParserParser.RULE_additionExpression




    def additionExpression(self):

        localctx = miParserParser.AdditionExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 34, self.RULE_additionExpression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155
            self.multiplicationExpression()
            self.state = 156
            self.additionFactor()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AdditionFactorContext(ParserRuleContext):
        __slots__ = 'parser'
